- Fixed: App could show old data when page loading was interrupted (#409)
- Fixed: Open action now works with quickmode (#500)
- Fixed: Unwanted linking between grouping option from stock & shopping list page
- Fixed: Private demo test instances not working after app restart
- Fixed: Different unit conversion behavior than on server in some cases (#490)

2.1.1:
- New: Support for grocy server 3.2.0
- New: Login flow for Home Assistant contains scanner for long-lived access token QR code
- Improved: Filter for opened products was added on stock overview page
- Improved: Items marked as done on shopping list are slightly greyed out (#498)
- Improved: Additional error descriptions for Home Assistant on login page
- Improved: Connection improvements for Home Assistant (#249)
- Fixed: Crash when phone was rotated after successful barcode scan (#487)
- Fixed: Crash with ZXing scanner on Android versions below Android 7 (#425)

2.1.0:
- New: Barcodes are now editable on master product page (thanks @DHM47 for the initial work) (#391)
- New: Quantity unit conversions are now editable on master product page (#396)
- New: Grouping feature for stock overview like on server
- New: Grouping feature for shopping list which allows group by default store (#430)
- Improved: Unnecessary bottom sheets in master data section were removed
- Improved: Master product page has new button (save without closing) to add barcodes after creation
- Improved: Workflow for master data pages with keyboard
- Improved: Navigation menu has less horizontal entries, transaction pages are in one row
- Improved: Added option to show product description on shopping mode page (#443)
- Improved: Error message for 403 response "no permission" (#432)
- Improved: Shopping list item edit page now has better handling of invalid product input (#481)
- Fixed: Product info bottom sheet didn't open if location not set in product
- Fixed: Scrollbars don't stop above the bottom anymore